// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`add-sections tool > creating a single section > should create a section and return mapped result 1`] = `
"Added 1 section:
• test-abc123def456-section (id=section-123, projectId=6cfCcrrCFg2xP94Q)"
`;

exports[`add-sections tool > creating a single section > should handle different section properties from API 1`] = `
"Added 1 section:
• My Section Name (id=section-456, projectId=project-789)"
`;

exports[`add-sections tool > creating multiple sections > should create multiple sections and return mapped results 1`] = `
"Added 3 sections:
• First Section (id=section-1, projectId=6cfCcrrCFg2xP94Q)
• Second Section (id=section-2, projectId=6cfCcrrCFg2xP94Q)
• Third Section (id=section-3, projectId=different-project)"
`;

exports[`add-sections tool > creating multiple sections > should handle sections for the same project 1`] = `
"Added 2 sections:
• To Do (id=section-1, projectId=6cfCcrrCFg2xP94Q)
• In Progress (id=section-2, projectId=6cfCcrrCFg2xP94Q)"
`;
